Used script to prepend front matter

--- a/pages/coding/infra/cloud/f5.md
+++ b/pages/coding/infra/cloud/f5.md
@@ -1,3 +1,8 @@
+---
+layout: page
+location: pages/coding/infra/cloud/leaf
+permalink: /pages/coding/infra/cloud/F5-Load-Balancer
+---
   - Navigating F5:
     
       - You might have a front url and want to know what instances it’s
