More Cadogan content

--- a/pages/coding/infra/cloud/aws/s3.md
+++ b/pages/coding/infra/cloud/aws/s3.md
@@ -59,14 +59,14 @@ permalink: /pages/coding/infra/cloud/aws/S3
       - Exit docker container: **exit**
       - Then run this command to copy log out of container and into
         host: **sudo docker cp
-        470bdbc4d391:/opt/cdg-backend/logs/cdg.log ./**
+        470bdbc4d391:/opt/myfolder/logs/mything.log ./**
           - You’ll need the correct file name
           - You’ll also need the correct docker container id
       - Then exit instance: **logout**
       - Then back on local machine, run this command to fetch log and
         copy to local: **scp -i "/Volumes/GoogleDrive/My
-        Drive/Clients/CDG/TechInfo/go-server.pem"
-        ec2-user@34.243.16.34:/home/ec2-user/cdg.log
-        "/Volumes/GoogleDrive/My Drive/Clients/CDG/TechInfo"**
+        Drive/go-server.pem"
+        ec2-user@[ip-address]:/home/ec2-user/mything.log
+        "/Volumes/GoogleDrive/My Drive/"**
           - You’ll need the correct file name
           - You’ll also need the correct user name / IP address
