More stuff from Samaba Useful Notes

--- a/pages/coding/infra/cloud/aws/s3.md
+++ b/pages/coding/infra/cloud/aws/s3.md
@@ -5,7 +5,12 @@ permalink: /pages/coding/infra/cloud/aws/S3
 ---
 ## Historic Notes
 
-  - These notes were originally written 2018
+- This page was originally based on notes written in 2018, so at least some of it will be out of date.
+
+## General Intro
+
+- Amazon S3 - simple secure storage, used for storing flat files
+- At Samba we kept app definitions in S3 for source control of configs, so we could do rollbacks
 
 ## Configuring S3 buckets
 
