added new XP talk titles

--- a/pages/think/events/other-talks/2021-xp.md
+++ b/pages/think/events/other-talks/2021-xp.md
@@ -41,3 +41,11 @@ No notes.
 3. How much can we deliver?
     - Use waves - wave 1, 2 and 3 (like phases?)
 Now it becomes easy - include sponsor in team's process
+
+## A Lighting Study in how Agile helps unlock Innovation through Experimentation - Patrick Lamasney - Enbridge + Ovais Rehman - Enbridge
+
+
+## 6 Must-Haves for Maximizing Virtual Dojo Engagement - Jess Brock - Agility in Mind
+
+## Hands-on workshop with Design Studio let’s you create a collaborative and iterative user interface for a complex problem in less than 60!
+
