wordpress, Little's Law

--- a/pages/think/events/other-talks/2021-xp.md
+++ b/pages/think/events/other-talks/2021-xp.md
@@ -29,7 +29,7 @@ No notes.
     - ["mob"](https://github.com/remotemobprogramming/mob) 
     - Switches you to the mobbing branch and pulls all the latest changes
     - Use command `mod done` when done - squashes all changes to a single commit and leaves them staged to master branch
-- Remote mob timer
+- Remote mob timer / ensemble timer
     - [here](https://mobti.me/)
 
 ## Prioritizing user stories remotely - a framework to help an agile team - Priscila Alcântara
